--- a/app/ejercicio4_solucion.html
+++ b/app/ejercicio4_solucion.html
@@ -461,10 +461,16 @@
         "filter": true,
         "order": [[ 0, "asc" ]],
         "columnDefs": [{
-                "targets": [ 2,3],
-                "visible": false,
-                "searchable": true
-            }]
+                "targets": [2],
+                "visible": false
+             
+            },
+            {
+                 "targets": [3],
+                 "searchable": false,
+                "visible": false
+            }
+            ]
 
         
     } );
